# bas

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: code_style_check.yml  run_tests.yml
include/bas/: allocator.h  array.h  array_ref.h  memory_utils.h  set.h  stack.h  string_map.h  string_ref.h  utildefines.h  vector.h  vector_base.h  vector_set.h
include/my_core_lib/: allocator.h  array_ref.h  index_range.h  memory_utils.h  utildefines.h
src/: aligned_allocation.cc
tests/: aligned_allocation_test.cc  allocator_test.cc  array_ref_test.cc  array_test.cc  first_test.cc  index_range_test.cc  linear_allocator_test.cc  map_test.cc  multi_map_test.cc  second_test.cc  set_test.cc  stack_test.cc  string_map_test.cc  string_ref_test.cc  utildefines_test.cc  vector_set_test.cc  vector_test.cc
